# FutureOfAIviaAI

./: .gitignore  AUC Summary M9.txt  PROPOSAL.md  README.md  agent_runner.py  pyproject.toml
agents/: __init__.py  experiment_agent.py  impl_agent.py  report_agent.py  spec_agent.py
all_models/: __init__.py
all_models/M9/: README.md  evaluate_model.py  model.py
all_models/M9_PyG_GCN/: README.md  model.py
tools/: __init__.py  dataset_inspector.py  experiment_runner.py  log_parser.py  plotter.py
